panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__decl_in_global_scope__test_error_declaration_without_type.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - panko/tests/cases/decl_in_global_scope/test_error_declaration_without_type.c
---
success: false
exit_code: 101
----- stdout -----

----- stderr -----
Error: declaration does not specify a type
   ╭─[panko/tests/cases/decl_in_global_scope/test_error_declaration_without_type.c:1:1]
   │
 1 │ const a;
   │ ──┬──  
   │   ╰──── type missing
───╯

Error: declaration does not specify a type
   ╭─[panko/tests/cases/decl_in_global_scope/test_error_declaration_without_type.c:2:1]
   │
 2 │ volatile* b;
   │ ────┬───  
   │     ╰───── type missing
───╯

Error: declaration does not specify a type
   ╭─[panko/tests/cases/decl_in_global_scope/test_error_declaration_without_type.c:3:1]
   │
 3 │ const* const c;
   │ ──┬──  
   │   ╰──── type missing
───╯
thread 'main' panicked at panko/src/main.rs:30:9:
not yet implemented: not all diagnostics are fatal
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
