panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__decl_in_global_scope__test_error_declare_varargs_function_with_void_param.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/decl_in_global_scope/test_error_declare_varargs_function_with_void_param.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/decl_in_global_scope/test_error_declare_varargs_function_with_void_param.c"
   (declaration f~0 `fn(∅: void, ...) -> int` ∅))

----- stderr -----
