panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__decl_in_global_scope__test_error_function_definition_with_initialiser.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/decl_in_global_scope/test_error_function_definition_with_initialiser.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (declaration f~0 `fn(∅: int) -> int` 42))

----- stderr -----
