panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__decl_in_global_scope__test_error_redeclaration_with_different_type.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/decl_in_global_scope/test_error_redeclaration_with_different_type.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/decl_in_global_scope/test_error_redeclaration_with_different_type.c"
   (declaration a~0 `int` ∅)
   (declaration a~0 `int const` ∅)
   (declaration f~2 `int` ∅)
   (declaration f~2 `fn() -> int` ∅)
   (declaration g~4 `fn(∅: int) -> int` ∅)
   (declaration g~4 `fn(x: int) -> int` ∅)
   (declaration g~4 `fn(∅: int, ∅: int) -> int` ∅))

----- stderr -----
